Trying to fix alignment issues with images and text

--- a/style.css
+++ b/style.css
@@ -115,33 +115,40 @@ nav{
 }
 
 /*PROJECTS PAGE*/
-
 .projectcontainer{
     display: flex;
-    align-items: flex-start;
-    justify-content: space-around;
     flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
-.projectcontainer h4{
+.projectdetails{
+    max-width: 70vh;
+    min-width: 50vh;
+    padding:1%;
+    padding-left: 1%;
+    font-family: DM serif;
+    font-size: 20px;
+    list-style-position: inside;
+}
+
+
+.projectdetails h4{
+    padding-top: 9%;
     padding-bottom: 10%;
     display: flex;
     font-family: DM serif;
     font-size: 24px;
-    padding-left: 4%;
+    
+}
+
+.projectdetails ul{
+    padding-top: 10%;
 
 }
 
-.projectcontainer p{
-    display: flex;
-    justify-content: space-between;
-    max-width: 70vh;
-    min-width: 50vh;
-    padding:1%;
-    padding-left: 4%;
-    font-family: DM serif;
-    font-size: 20px;
-
-
+.project1images img{
+    width: 325px;
+    height: 200px;
 }
 
